<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:id="@+id/homeScreen"
     android:title="@string/home"
     android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/exploreScreen"
        android:title="@string/explore"
        android:icon="@drawable/ic_baseline_search_24"/>
    <item
        android:id="@+id/bookingScreen"
        android:title="@string/booking"
        android:icon="@drawable/ic_baseline_calendar_month_24"/>
    <item
        android:id="@+id/savedScreen"
        android:title="@string/saved"
        android:icon="@drawable/ic_baseline_favorite_24"/>
    <item
        android:id="@+id/profileScreen"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>