<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SavedScreen"
    android:paddingTop="35dp"
    android:paddingHorizontal="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/haveLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:id="@+id/favorHotelTitle"
            android:text="@string/favor_title"
            android:textSize="25sp"
            android:textStyle="bold"
            style="@style/TEXT"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:id="@+id/favorHotelRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/favorHotelTitle"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/notSignView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/favorHotelTitle"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            style="@style/SCREEN_2">
            <TextView
                style="@style/TEXT"
                android:text="@string/login_warn"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/signInbutton"
                android:layout_marginTop="10dp"
                android:text="@string/signIn"
                android:textSize="16sp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>