<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfilePage.ListSettingScreen"
    style="@style/SCREEN">
    <include layout="@layout/toolbar_title" android:id="@+id/toolbarSetting"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSetting"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/lanContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp">
            <TextView
                style="@style/TEXT"
                android:layout_alignParentStart="true"
                android:text="@string/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
        <View
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp">
            <TextView
                style="@style/TEXT"
                android:layout_alignParentStart="true"
                android:text="@string/dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>
            <Switch
                android:id="@+id/switchbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
        <View
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp">
            <TextView
                android:layout_alignParentStart="true"
                android:text="@string/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
        <View
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>