<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.roomPage.ConfirmPayScreen"
   >
    <include android:id="@+id/toolbar" layout="@layout/toolbar_title"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/SCREEN">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="20dp"
            android:orientation="vertical"
            style="@style/SCREEN">
            <RelativeLayout
                android:id="@+id/headerPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="20dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/avaContainer"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="15dp">
                    <ImageView
                        android:id="@+id/avaHotel"
                        android:src="@drawable/test_image"
                        android:scaleType="centerCrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:text="Luxvoy Luxury Ha Noi Hotel"
                    style="@style/TEXT"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/avaContainer"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="Stay information"
                    style="@style/TEXT_2"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/timeInfoTxt"
                        android:text="Sep 11-14 (3 Nights)"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    >
                    <TextView
                        android:id="@+id/roomTxt"
                        android:text="1 Room, 2 Guests"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/roomTitle"
                        android:text="1 King bed, guest room, Non-Smoking"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </RelativeLayout>

            </LinearLayout>
            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#727272"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/summary_of_charges"
                    style="@style/TEXT_2"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:text="@string/price"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        />

                    <TextView
                        android:id="@+id/priceTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="120 USD"
                        style="@style/TEXT"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/service_charge"
                        style="@style/TEXT"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/serviceTxt"
                        android:text="20 USD"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:text="@string/taxes_and_fee"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        />
                    <TextView
                        android:id="@+id/taxesTxt"
                        android:text="40 USD"
                        style="@style/TEXT"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_marginVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF9D43"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:text="@string/total_stay"
                    style="@style/TEXT"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:id="@+id/totalTxt"
                    android:text="180 USD"
                    style="@style/TEXT"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
            <TextView
                android:text="@string/addition_charge"
                style="@style/TEXT_2"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:text="@string/addition_charge_content"
                style="@style/TEXT"
                android:lineHeight="20sp"
                android:textSize="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#727272"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:text="Voucher"
                style="@style/TEXT_2"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
             />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/voucher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_white_corner_border_gray"
                    android:hint="Feedback"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/submitVoucher"
                    android:padding="12dp" />
                <Button
                    android:id="@+id/submitVoucher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"
                    android:text="Xác nhận"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/errorVoucher"
                android:text="Voucher không hợp lệ"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#C8102E"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#727272"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:text="Your payment option"
                style="@style/TEXT_2"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <RadioGroup
                android:id="@+id/paymentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <RadioButton
                    android:id="@+id/pay_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layoutDirection="rtl"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:text="@string/pay_when_u_stay"
                    android:textSize="14sp"
                    style="@style/TEXT"/>
                <RadioButton
                    android:id="@+id/pay_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layoutDirection="rtl"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:text="@string/pre_pay"
                    android:textSize="14sp"
                    style="@style/TEXT"/>
            </RadioGroup>
            <androidx.cardview.widget.CardView
                android:id="@+id/btnSubmitBook"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="#C8102E"
                app:cardCornerRadius="20dp">
                <TextView
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:text="@string/book_now"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>